Fix - Comment discription to Alexa and Documentation URL

--- a/assistants/alexa/baby_room_clouds_on_the_wall.yaml
+++ b/assistants/alexa/baby_room_clouds_on_the_wall.yaml
@@ -1,9 +1,9 @@
 ---
-# Entity configuration for Google Assistant.
+# Entity configuration for Alexa.
 #
-# I use this to customize how the device shows up in Google Assistant.
+# I use this to customize how the device shows up in Alexa.
 #
-# https://www.home-assistant.io/integrations/google_assistant/#entity_config
+# https://www.nabucasa.com/config/amazon_alexa/
 #
 switch.baby_room_clouds_on_the_wall:
   name: Baby Room Clouds on the Wall
